Kubernetes/crop-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-rest-crop
spec:
  ports:
    - name: spring-rest-crop
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: spring-rest-crop
  type: ClusterIP
#type: NodePort
