Kubernetes/crop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-ingress
  namespace: spring-boot-examples
spec:
  rules:
    - host: hari-tech.com
      http:
        paths:
          - path: /crops
            pathType: Prefix
            backend:
              service:
                name: spring-rest-crop
                port:
                  number: 8081
